# smplx-toolbox

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml  test-anything.py
.github/workflows/: docs.yml  tests.yml
.promptx/: .xml-upgrade-backup-done  pouch.json
.promptx/backup/backup_1756975363514/: backup-meta.json
.promptx/memory/animation-dev/: declarative.dpml
.promptx/resource/: project.registry.json
.promptx/resource/role/animation-dev/: animation-dev.role.md
.promptx/resource/role/animation-dev/execution/: 3d-human-workflow.execution.md  blender-development.execution.md
.promptx/resource/role/animation-dev/thought/: animation-3d-thinking.thought.md  smplx-modeling.thought.md
context/: README.md
context/design/: README.md
context/hints/: README.md  howto-apply-vposer-prior.md  howto-extract-humanml-root-transform.md  howto-run-flowmdm-and-redirect-output.md  howto-setup-humanml3d.md
context/hints/smplx-kb/: about-smplx-transfer-model.md  compare-smpl-models.md  compare-smpl-shape.md  compare-smpl-skeleton.md  howto-apply-vposer-with-global-orient.md  howto-convert-smplh-to-smplx.md  howto-fit-smpl-family-models.md  howto-use-vposer-with-smpl-family-models.md  intro-smplx.md
context/instructions/: README.md
context/logs/: 2025-09-04_pixi-configuration-migration-complete.md  2025-09-04_project-config-cleanup-complete.md  2025-09-04_project-structure-setup-complete.md  ACTION_ITEMS_20250908.md  README.md  TEST_REPORTS_INDEX.md  test-report-20250908-181530-unified-model-refactoring.md
context/logs/code-reivew/: 20250908-000000-unified-model-impl-review.md  20250908-170453-unified-smpl-model-impl-review.md  20250911-visualization-module-review.md
context/plans/: README.md
context/plans/roadmaps/: roadmap-for-flowmdm-humanml3d-to-unified-model.md
context/refcode/: README.md
context/roles/: README.md
context/roles/3d-human-modeling-developer/: context.md  knowledge-base.md  memory.md  system-prompt.md
context/summaries/: README.md  lsfiles-smplx-toolbox-2025-09-08-1147.md  unified-model-implementation-summary.md
context/tasks/: README.md  goal.md  task-anything.md  task-fix-humanml-to-smplx-error.md  task-generic-skeleton.md  task-prefix.md  task-refactor-named-pose.md  task-vposer-easy-interface.md
context/tasks/auto-save/: command-implement-smpl-visualization.md  command-keypoint-match.md
context/tasks/backlog/: README.md  task-vposer-easy-interface.md
context/tasks/features/fitting-helper/: design-of-fitting-helper.md  req-fitting-helper.md
context/tasks/features/keypoint-match/: task-keypoint-match.md  task-vposer-prior.md  test-keypoint-match.md
context/tasks/features/smpl-vis/: design-visualization-module.md  design.md
context/tasks/features/unified-smpl-model/: task-find-smpl-relationship.md  task-unified-smpl.md
context/tasks/refactor/: task-refactor-named-pose-v1.md  task-refactor-named-pose-v2.md  task-refactor-named-pose.md  task-refactor-unifiedsmplinputs-to-namedpose.md
context/tools/: README.md
data/: README.md
data/body_models/: .gitignore
data/body_models/smpl/: .gitignore  README.md
data/body_models/smplh/: .gitignore  README.md
data/body_models/smplx/: .gitignore  README.md
data/transfer_data/: .gitignore
data/transfer_data/support_data/: .gitignore
data/vposer/: README.md
docs/: cli.md  configuration-summary.md  index.md  installation.md  line-endings.md  pypi-pytorch-strategy.md  pytorch-installation.md  usage.md  vposer.md
docs/core/: containers.md  smplh_model.md  smplx_model.md  unified_model.md
docs/fitting/: helper.md
docs/visualization/: index.md  utils.md  visualizer.md
examples/: README.md  unified_model_exports.py
scripts/: auto-install.py  cvt_flowmdm_babel_to_smpl_animation.py  cvt_flowmdm_humanml_to_smpl_animation.py  make_humanml_minimal_ext.py  make_t2m_neutral.py  motion-transfer-t2m-to-smplx.py  setup-wsl-proxy.sh  show-animation-unified-model.py  show-keypoint-match.py  smplx-toolbox
src/smplx_toolbox/: __init__.py
src/smplx_toolbox/cli_tools/: README.md
src/smplx_toolbox/core/: __init__.py  constants.py  containers.py  skeleton.py  smplh_model.py  smplx_model.py  unified_model.py
src/smplx_toolbox/fitting/: __init__.py  helper.py  types.py
src/smplx_toolbox/optimization/: __init__.py  angle_prior_builder.py  builders_base.py  keypoint_match_builder.py  pose_prior_vposer_builder.py  projected_keypoint_match_builder.py  robustifiers.py  shape_prior_builder.py
src/smplx_toolbox/utils/: __init__.py  device.py  humanml_mapping.py
src/smplx_toolbox/visualization/: __init__.py  config.py  plotter.py  utils.py
src/smplx_toolbox/vposer/: __init__.py  loader.py  model.py
tasks/features/keypoint-match/: task-keypoint-match.md
tests/: README.md  conftest.py  smoke_test_show_mesh.py  test_core.py  test_generic_skeleton.py  test_model_comparison.py  test_smplh_model.py  test_t2m_neutral.py  test_unified_model.py  vposer_v2_smoke.py
tests/fitting/: smoke_test_helper_keypoint_match.py  smoke_test_helper_keypoint_match_vposer.py  smoke_test_keypoint_match.py  smoke_test_keypoint_match_vposer.py
unittests/: README.md
unittests/fitting/: test_helper_keypoint_match.py  test_keypoint_match.py
unittests/optimization/: test_robustifiers.py
unittests/smplx_toolbox/core/: test_named_pose.py  test_unified_model.py
unittests/vposer/: test_vposer_loader.py
